[gd_scene load_steps=13 format=3 uid="uid://bdsc2h3fq3i5r"]

[ext_resource type="Script" path="res://Scenes/UI/UI.gd" id="1_3at1p"]
[ext_resource type="Theme" uid="uid://ctwc3vll6brq3" path="res://Assets/UI/UITheme.tres" id="2_jov4v"]
[ext_resource type="Texture2D" uid="uid://p4cmxjni572a" path="res://Assets/UI/soldier_placeholder.png" id="3_2ty8j"]
[ext_resource type="Texture2D" uid="uid://bj0t7s4gtnywf" path="res://Assets/UI/building_placeholder.png" id="3_nrc0u"]
[ext_resource type="Texture2D" uid="uid://bcqvg7sarjhnr" path="res://Assets/Buildings/Preview/headquarters.png" id="5_74123"]
[ext_resource type="Texture2D" uid="uid://dma7sjq28qaa6" path="res://Assets/Buildings/Preview/refinery.png" id="6_l037i"]
[ext_resource type="Texture2D" uid="uid://b1uf8qao5ciav" path="res://Assets/Buildings/Preview/powerplantplaceholder.png" id="7_5478k"]
[ext_resource type="Texture2D" uid="uid://bwchgs8csccg7" path="res://Assets/Buildings/Preview/barracks.png" id="8_udw6q"]
[ext_resource type="Texture2D" uid="uid://bkmu5yn45i2a4" path="res://Assets/Buildings/Preview/Screenshot 2024-03-12 160239.png" id="9_r8k53"]
[ext_resource type="Texture2D" uid="uid://usnm76x8fdks" path="res://Assets/Buildings/Preview/Screenshot 2024-03-12 160457.png" id="10_t71ho"]
[ext_resource type="Texture2D" uid="uid://dbludfsf16qtg" path="res://Assets/Buildings/Preview/tower.png" id="11_d5cxj"]
[ext_resource type="Texture2D" uid="uid://dj8kh53esb007" path="res://Assets/Buildings/Preview/nuclearplantplaceholder.png" id="12_tx0jq"]

[node name="BuildingsUI" type="CanvasLayer"]
script = ExtResource("1_3at1p")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -534.0
offset_top = 18.0
offset_right = -18.0
offset_bottom = 954.0
grow_horizontal = 0
theme = ExtResource("2_jov4v")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"AttributePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Time" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "0:00"

[node name="PanelContainer2" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"AttributePanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Money" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "$$$"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 300)
layout_mode = 2
theme_type_variation = &"MapPanelContainer"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="Spacer" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.31

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 3.0

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Button"]
layout_mode = 0
offset_left = 37.0
offset_top = 9.0
offset_right = 54.0
offset_bottom = 22.0
texture = ExtResource("3_nrc0u")
expand_mode = 1

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 3.0

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Button2"]
layout_mode = 0
offset_left = 43.0
offset_top = 8.0
offset_right = 61.0
offset_bottom = 24.0
texture = ExtResource("3_2ty8j")
expand_mode = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PowerEmpty" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"PowerPanelContainerEmpty"

[node name="PowerCapSpace" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"PowerPanelContainerCapSpace"

[node name="PowerUsed" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"PowerPanelContainerUsed"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 80.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "Q"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("5_74123")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "600"

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button2"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 80.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button2/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "W"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("6_l037i")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button"]
layout_mode = 0
offset_right = 205.0
offset_bottom = 80.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "E"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("7_5478k")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "220"

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button2"]
layout_mode = 0
offset_right = 204.0
offset_bottom = 82.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button2/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "R"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("8_udw6q")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 81.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "T"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("9_r8k53")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button2"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 81.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button2/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "Y"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("10_t71ho")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 80.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "U"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("11_d5cxj")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button2"]
layout_mode = 0
offset_right = 201.0
offset_bottom = 81.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button2/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "Z"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("12_tx0jq")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 82.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "X"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("3_nrc0u")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button2"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 82.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button2/MarginContainer"]
layout_mode = 2

[node name="Keybind" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "C"

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.95
texture = ExtResource("3_nrc0u")
expand_mode = 1

[node name="price" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer5/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 10.0
theme_type_variation = &"ButtonLabel"
text = "100"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button" to="." method="_headquarters_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/Button2" to="." method="_refinery_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button" to="." method="_power_plant_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer2/Button2" to="." method="_quarters_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button" to="." method="_factory_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer3/Button2" to="." method="_airport_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer4/Button2" to="." method="_nuclear_plant_button_pressed"]
